# bone

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  README.md  calagen.code-workspace
example/: CMakeLists.txt
example/src/: main.cpp
include/: calagen.h
include/bone/: calagen.hpp
src/: CMakeLists.txt  calagen.cpp  main.cpp
src/bone/: calagen.cpp
tool/: CMakeLists.txt
